# flet_spinkit

./: README.md  index.md  pyproject.toml
examples/flet_spinkit_example/: pyproject.toml
examples/flet_spinkit_example/src/: main.py
src/flet_spinkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_spinkit/lib/src/: extension.dart
